--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -16,7 +16,7 @@
         <tr>
           <td>#</td>
           <td><%= link_to(group.title, group_path(group)) %></td>
-          <td><%= group.description %></td>
+          <td><%= simple_format(group.description) %></td>
           <td><%= group.user.email %> </td>
                   <% if current_user && current_user == group.user %>
                   <%= link_to("Edit", edit_group_path(group), class: "btn btn-sm btn-default")%>
@@ -28,32 +28,6 @@
     </tbody>
   </table>
 
-  <h2 class="text-center"> 我加入的讨论版 </h2>
-
-  <table class="table">
-    <thead>
-      <tr>
-        <th> # </th>
-        <th> Title </th>
-        <th> Description </th>
-        <th> Post Count </th>
-        <th> Last Update </th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <% @groups.each do |group| %>
-        <tr>
-          <td> # </td>
-          <td> <%= link_to(group.title, group_path(group)) %> </td>
-          <td> <%= group.description %> </td>
-          <td> <%= group.posts.count %> </td>
-          <td> <%= group.updated_at %> </td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-</div>
 
 
 </div>
